--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=8000
-MONGODB_URI= mongodb://0.0.0.0:27017/sell_plan
+MONGODB_URI= mongodb+srv://yash18chouhan:J2sqQkZObeONVgco@cluster0.a6fmka5.mongodb.net/Sell_plans?retryWrites=true&w=majority
 JWT_SECRET=chak_de_India
